fix alignment

--- a/style.css
+++ b/style.css
@@ -178,7 +178,6 @@ h5 {
 
 .announcements {
     display: grid;
-    gap: 15px;
 }
 
 .second {
